[package]
name = "x17int"
version = "0.1.0"
authors = ["Jiri <jiri.bobek@gmail.com>"]
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
smallvec = { version = "1.7.0", features = ["union"] }
bit-set = "0.6.0"
thin-vec = "0.2.13"
arrayvec = "0.7.4"
matrixmultiply = "0.3.8"
stderrlog = "0.6.0"
log = "0.4.22"
